# mypackage

./: .gitignore  .gitmodules  README.md  pyproject.toml
src/components/component-a/: README.md  component.py
src/components/component-b/: README.md  component.py
src/mypackage/components/component-c/: README.md  component.py
